Closed Bug 1535866 Opened 5 years ago Closed 5 years ago

Crash in [@ mozilla::gfx::DrawTargetD2D1::CreateGradientStops]

Categories

(Core :: Graphics, defect, P1)

66 Branch
All
Windows
defect

Tracking

()

RESOLVED FIXED
mozilla68
Tracking Status
firefox-esr60 --- unaffected
firefox65 --- unaffected
firefox66 + wontfix
firefox67 + fixed
firefox68 --- fixed

People

(Reporter: philipp, Assigned: bas.schouten)

References

(Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

This bug is for crash report bp-828147dd-5ef9-45eb-ba10-c61430190315.

Top 8 frames of crashing thread:

0 xul.dll struct already_AddRefed<mozilla::gfx::GradientStops> mozilla::gfx::DrawTargetD2D1::CreateGradientStops gfx/2d/DrawTargetD2D1.cpp:1139
1 xul.dll mozilla::gfx::gfxGradientCache::GetOrCreateGradientStops gfx/thebes/gfxGradientCache.cpp:191
2 xul.dll class mozilla::gfx::GradientStops* mozilla::dom::CanvasGradient::GetGradientStopsForTarget dom/canvas/CanvasGradient.h:35
3 xul.dll class mozilla::gfx::Pattern& const mozilla::dom::CanvasGeneralPattern::ForStyle dom/canvas/CanvasRenderingContext2D.cpp:272
4 xul.dll mozilla::dom::CanvasRenderingContext2D::Fill dom/canvas/CanvasRenderingContext2D.cpp:2603
5 xul.dll static bool mozilla::dom::CanvasRenderingContext2D_Binding::fill dom/bindings/CanvasRenderingContext2DBinding.cpp
6 xul.dll mozilla::dom::binding_detail::GenericMethod<mozilla::dom::binding_detail::NormalThisPolicy, mozilla::dom::binding_detail::ThrowExceptions> dom/bindings/BindingUtils.cpp:3144
7  @0x290835207fc 

this crash signature has started showing up since 67.0a1 build 20190307094951 and the 66 release candidate builds on beta.

Hey Bas - can you take a peak at this? Wondering if it has been caused by 1521774

Flags: needinfo?(bas)
Priority: -- → P2

Seems very likely.

Assignee: nobody → bas
Status: NEW → ASSIGNED
Flags: needinfo?(bas)

I guess we can keep this for a ride-along with a potential 66.0.3?

I don't think that's necessary since the crash volume isn't super high at this point. But happy to take an uplift for beta here.

Too late for 66 but tracking for 67.

Priority: P2 → P1

Bas, could you give us a status update on this crash? Thanks

Flags: needinfo?(bas)

Hmm. I'll put up a patch for this somewhere the next week.

Flags: needinfo?(bas)

(In reply to Bas Schouten (:bas.schouten) from comment #7)

Hmm. I'll put up a patch for this somewhere the next week.

Any news about your patch? thanks

Flags: needinfo?(bas)

Bas, it seems that this patch got r+ and is minimal, could you land it and request an uplift to our last beta? Thanks

Pushed by bschouten@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/6cab2047fa7a
Check if a valid DeviceContext is available before attempting to use it. r=rhunt
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla68

Ryan, could you make an uplift request today as the reviewer please? Thanks

Flags: needinfo?(rhunt)

Comment on attachment 9061200 [details]
Bug 1535866: Check if a valid DeviceContext is available before attempting to use it. r=rhunt

Beta/Release Uplift Approval Request

  • User impact if declined: Crashes
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Simple nullcheck.
  • String changes made/needed: None
Flags: needinfo?(bas)
Attachment #9061200 - Flags: approval-mozilla-beta?
Flags: needinfo?(rhunt)

Comment on attachment 9061200 [details]
Bug 1535866: Check if a valid DeviceContext is available before attempting to use it. r=rhunt

Crash fix, ok for uplift. This should make it into the 67 RC build.

Attachment #9061200 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: