Bug 1535866: Check if a valid DeviceContext is available before attempting to use it. r=rhunt a=lizzard

Differential Revision: https://phabricator.services.mozilla.com/D29106